--- a/package.json
+++ b/package.json
@@ -16,12 +16,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
-<<<<<<< HEAD
     "socket.io": "^4.7.4",
-    "socket.io-client": "^4.7.4"
-=======
+    "socket.io-client": "^4.7.4",
     "three": "^0.161.0"
->>>>>>> Threejs
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
