--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@jonasdoesthings/react-activity-rings": "^1.1.2",
+    "@react-spring/web": "^9.7.3",
+    "d3": "^7.8.5",
     "framer-motion": "^11.0.3",
+    "install": "^0.13.0",
     "jotai": "^2.6.4",
+    "npm": "^10.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
@@ -21,6 +26,7 @@
     "three": "^0.161.0"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/three": "^0.161.2",
